style: fix heights and spacing on the homepage hero and aim sections

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,7 +7,7 @@ body {
 }
 
 
-.ppc{
+.ppc {
     height: 100vh;
 }
 
@@ -16,7 +16,7 @@ body {
     margin: 0 auto;
 }
 
-.optionC{
+.optionC {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -25,7 +25,7 @@ body {
     z-index: 100;
 }
 
-.Options{
+.Options {
     gap: 20px;
     display: flex;
     position: relative;
@@ -36,27 +36,28 @@ body {
     border-radius: 10px;
     background-color: #5a655b;
     padding: 30px;
-    
-    li{
-       list-style-type: none;
+
+    li {
+        list-style-type: none;
     }
 }
 
-.optionC{
+.optionC {
     position: absolute;
     right: 10%;
-    
+
     padding: 20px;
 }
 
-@media screen and (max-width : 568px){
-    .containerHomeNavMob{
+@media screen and (max-width : 568px) {
+    .containerHomeNavMob {
         position: relative;
         display: flex;
         justify-content: space-between;
-        
-        font-size: clamp(12px , 1.25vw , 5vw);
-        h1{
+
+        font-size: clamp(12px, 1.25vw, 5vw);
+
+        h1 {
             position: relative;
             left: 10vw;
         }
@@ -64,30 +65,32 @@ body {
 }
 
 
-.optionBtn{
+.optionBtn {
     background-color: transparent;
     position: relative;
     justify-self: flex-end;
     border: 0px;
     box-shadow: 0px;
 }
+
 .headerHome {
     background-color: #213f24eb;
     color: #fff;
-    padding: 20px 0;   
+    padding: 20px 0;
 }
 
-.containerHomeNav{
+.containerHomeNav {
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: clamp(12px , 1.25vw , 5vw);
-    h1{
+    font-size: clamp(12px, 1.25vw, 5vw);
+
+    h1 {
         position: relative;
         left: 5vw;
 
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
     }
@@ -102,7 +105,7 @@ nav ul {
 nav ul li {
     display: inline;
     margin-right: 20px;
-    
+
 }
 
 nav ul li a {
@@ -111,27 +114,26 @@ nav ul li a {
 }
 
 .hero {
-    /*background-image: url("https://cdn.pixabay.com/photo/2014/04/17/23/26/environmental-protection-326923_1280.jpg");*/
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: url("../assets/homecover.jpg");
-    height:100%;
+    height: 60vh;
+    /* Changed from 100% to fill decent portion of screen */
+    min-height: 400px;
     background-size: cover;
     background-repeat: no-repeat;
-    object-fit: cover;
-    background-position: center; 
+    background-position: center;
     color: #fff;
-
 }
 
 .hero h2 {
-    font-size: clamp(40px , 4vw , 5vw);
+    font-size: clamp(40px, 4vw, 5vw);
     margin-bottom: 20px;
 }
 
 .hero p {
-    font-size: clamp(12px , 20px , 5vw);
+    font-size: clamp(12px, 20px, 5vw);
     margin-bottom: 30px;
 }
 
@@ -168,75 +170,77 @@ footer {
     text-align: center;
     padding: 20px 0;
 }
-footer .container p a{
+
+footer .container p a {
     color: #fff;
     text-decoration: none;
 }
 
 
-.ourAimContainer{
-
+.ourAimContainer {
     display: flex;
     gap: 20px;
     justify-content: space-between;
     align-items: center;
-    min-height: 40vw;
+    min-height: 40vh;
+    /* Reduced extra space */
     background-color: #F4F0EA;
+    padding: 60px 0;
+    /* Add padding instead of relying on min-height */
 }
 
-.ourAimContainer img{
+.ourAimContainer img {
     position: relative;
-    width: clamp(250px,30vw,100vw);
+    width: clamp(250px, 30vw, 100vw);
     right: 10%;
 }
 
-.aimText{
+.aimText {
     display: flex;
     padding: 10px;
     flex-direction: column;
     width: 30%;
     position: relative;
     left: 10%;
-    font-size: clamp(16px,1.5vw,1000px);
+    font-size: clamp(16px, 1.5vw, 1000px);
 
-    h3{
+    h3 {
         color: #66B266;
     }
 }
 
 @media screen and (max-width : 700px) {
-    .ourAimContainer{
-
+    .ourAimContainer {
         display: flex;
         gap: 20px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #ffffff;
-        margin-top: 20%;
-        margin-bottom: 10%;
+        background-color: #F4F0EA;
+        padding: 40px 0;
     }
 
     .ourAimContainer img {
-        width: clamp(250px,30vw,100vw);
+        width: clamp(250px, 30vw, 100vw);
         right: 0%;
     }
 
-    .aimText{
+    .aimText {
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        font-size: clamp(16px,20px,25px);
+        font-size: clamp(16px, 20px, 25px);
         width: 80%;
         left: 0%;
-        h3{
+
+        h3 {
             color: #66B266;
             justify-self: center;
             align-self: center;
         }
-        
-        p{
+
+        p {
             position: relative;
             left: 3%;
         }
